syntax = "proto3";

package catalog;
option go_package = "github.com/kamilszymanski707/online-sushi-shop/lib/proto-lib";

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string name = 1;
  string link = 2;
  string image_url = 3;
  string price = 4;
}

service CatalogService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}